# zeiss-coding-challenge

./: .env  .gitignore  .sesskey  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  config.py  docker-compose.yml  frontend.py  main.py  pyproject.toml  taskfile.yml
backend/: Dockerfile
backend/src/: database.py  main.py  models.py  schemas.py
backend/src/api/: __init__.py  arxiv.py  queries.py  results.py
backend/tests/: test_backend.py
frontend/: Dockerfile
frontend/src/: __init__.py  components.py  main.py
frontend/src/assets/: styles.css
frontend/tests/: test_frontend.py
src/backend/: Dockerfile  api.py
src/frontend/: Dockerfile  frontend.py
src/frontend/assets/: styles.css
