[tool.poetry]
name = "zeiss-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Papp Bence <bencep4pp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
feedparser = "^6.0.11"
python-fasthtml = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
