[tool.poetry]
name = "zeiss-coding-challenge"
version = "1.0.0"
description = ""
authors = ["Papp Bence <bencep4pp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
tenacity = "^9.0.0"
requests = "^2.32.3"
feedparser = "^6.0.11"
httpx = "^0.27.0"
python-fasthtml = "0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-playwright = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
